fixed typos in rigid body section

--- a/projects.html
+++ b/projects.html
@@ -146,8 +146,8 @@
 										<div id="Rigid_body_dyna"><div></div>
 										<h3 class="major"></h3>
 											<h4>Cal Poly Cubesat Laboratory - Large Scale Rigid Body Dynamics Simulation for ADCS</h4>
-												<p><span class="image left"><img src="images/simulink_adcs.png" alt="" /></span>The attitude determination and control system (ADCS) is historically a difficult system to design and implement. While, the Cal Poly Cubesat Laboratory has historically used simplified, passive systems, increasing mission complexity has called for a more rebust design framework for the CPCL ADCS.</p>
-												<p>This project involved working off of the MATLAB / Simulink framework developed by Liam Bruno as part of his masters thesis in aerospace engineering, which can be found <a href="https://digitalcommons.calpoly.edu/theses/2288/"><b>here</b></a>. The code features an adjustable orbit propogator via the equation
+												<p><span class="image left"><img src="images/simulink_adcs.png" alt="" /></span>The attitude determination and control system (ADCS) is historically a difficult system to design and implement. While, the Cal Poly Cubesat Laboratory has historically used simplified, passive systems, increasing mission complexity has called for a more robust design framework for the CPCL ADCS.</p>
+												<p>This project involved working off of the MATLAB / Simulink framework developed by Liam Bruno as part of his masters thesis in aerospace engineering, which can be found <a href="https://digitalcommons.calpoly.edu/theses/2288/"><b>here</b></a>. The code features an adjustable orbit propagator via the equation
 												\[\mathbf{a}=\frac{\mu}{|\mathbf{R}|^3}\mathbf{R}\]
 												<!--<math display="block">
 													a=<mfrac><mn>-&#956</mn><msup><mi>|R|</mi><mn>3</mn></msup></mfrac>R
