added UCLA stuff

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Trevor Loe</h2>
-							<p>Physics and Mathematics student at Cal Poly San Luis Obispo</a><div class="col-4"><span class="image fit"><img src="images/backpacking_2.jpg" alt="" /></span></div></p>
+							<p>Mathematics Ph.D. Student at UCLA</a><div class="col-4"><span class="image fit"><img src="images/backpacking_2.jpg" alt="" /></span></div></p>
 						</div>
 					</section>
 
@@ -55,7 +55,7 @@
 						<section id="about" class="wrapper alt style2">
 							<div class="inner">
 								<h2 class="major">About Me</h2>
-								<p>Hello! My name is Trevor Loe and I am graduating as a double major in Physics and Mathematics, Summa Cum Laude at the California Polytechnic State University, San Luis Obispo. I have experience in programming computational math and physics (in Python, Matlab, and Fortran), control theory, and computational physics research. I have had to opportunity to work on several research projects relating to computational accelerator physics, optimal control theory, biology, and aerospace engineering. I am interested in research on computational mathematics of nonlinear systems, especially physically motivated systems, and optimal control theory.</p>
+								<p>Hello! My name is Trevor Loe and I am a Ph.D. student in Applied Mathematics at UCLA, starting August 5th, 2023. I graduated as a double major in Physics and Mathematics, Summa Cum Laude at the California Polytechnic State University, San Luis Obispo. I am generally interested in research related to applied and computational mathematics related to nonlinear dynamical systems and networks. My technical experience, both as a software engineer and as a mathematics student has involved research in the areas of control theory, particle accelerators, biological modeling, and RF systems.</p>
 								<a href="CV_TrevorLoe_Sep2023.pdf" class="button small">CV</a>
 								<p>Below you can find the research projects I've worked on, the professional activities I participated in, my teaching experience, and a list of my publications.</p>
 								<a href="projects.html" class="button">Projects</a>
@@ -71,7 +71,9 @@
 								<h4></h4>
 												<ul>
 													<li><b>California Polytechnic State University, San Luis Obispo, CA</b> - Bachelor's of Science in Physics and Mathematics, <i>Summa Cum Laude</i> 
-													Aug. 2019 - Dec. 2023</li>
+													<br>Aug. 2019 - Dec. 2023</li>
+													<li><b>UCLA, Los Angeles, CA</b> - Doctor of Philosophy in Mathematics (Applied) 
+													<br>Aug. 2024 - June. 2029</li>
 												</ul>
 							</div>
 						</section>
