updated landing page image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Trevor Loe</h2>
-							<p>Mathematics Ph.D. Student at UCLA</a><div class="col-4"><span class="image fit"><img src="images/backpacking_2.jpg" alt="" /></span></div></p>
+							<p>Mathematics Ph.D. Student at UCLA</a><div class="col-4"><span class="image fit"><img src="images/me_with_einstein.jpeg" alt="" /></span></div></p>
 						</div>
 					</section>
 
