added awards and recognitions page to test

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 								<li><a href="projects.html">Projects</a></li>
 								<li><a href="activities.html">Activities</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
+								<li><a href="awards_and_recognitions.html">Awards and Recognitions</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -55,13 +56,14 @@
 						<section id="about" class="wrapper alt style2">
 							<div class="inner">
 								<h2 class="major">About Me</h2>
-								<p>Hello! My name is Trevor Loe and I am a Ph.D. student in Applied Mathematics at UCLA, starting August 5th, 2023. I graduated as a double major in Physics and Mathematics, Summa Cum Laude at the California Polytechnic State University, San Luis Obispo. I am generally interested in research related to applied and computational mathematics related to nonlinear dynamical systems and networks. My technical experience, both as a software engineer and as a mathematics student has involved research in the areas of control theory, particle accelerators, biological modeling, and RF systems.</p>
+								<p>Hello! My name is Trevor Loe and I am a Ph.D. student in Applied Mathematics at UCLA. I graduated as a double major in Physics and Mathematics, Summa Cum Laude at the California Polytechnic State University, San Luis Obispo. I am generally interested in research related to applied and computational mathematics related to nonlinear dynamical systems and networks. My technical experience, both as a software engineer and as a mathematics student has involved research in the areas of control theory, particle accelerators, biological modeling, and RF systems.</p>
 								<a href="CV_TrevorLoe_Sep2023.pdf" class="button small">CV</a>
 								<p>Below you can find the research projects I've worked on, the professional activities I participated in, my teaching experience, and a list of my publications.</p>
 								<a href="projects.html" class="button">Projects</a>
 								<a href="activities.html" class="button">Activities</a>
 								<a href="teaching.html" class="button">Teaching</a>
 								<a href="publications.html" class="button">Publications</a>
+								<a href="awards_and_recognitions.html" class="button">Awards and Recognitions</a>
 							</div>
 						</section>
 
@@ -73,7 +75,7 @@
 													<li><b>California Polytechnic State University, San Luis Obispo, CA</b> - Bachelor's of Science in Physics and Mathematics, <i>Summa Cum Laude</i> 
 													<br>Aug. 2019 - Dec. 2023</li>
 													<li><b>UCLA, Los Angeles, CA</b> - Doctor of Philosophy in Mathematics (Applied) 
-													<br>Aug. 2024 - June. 2029</li>
+													<br>Sep. 2024 - June. 2029</li>
 												</ul>
 							</div>
 						</section>
