added my first TA position to the teaching section

--- a/teaching.html
+++ b/teaching.html
@@ -62,10 +62,10 @@
 									<section>
 										<div id="Teaching"><div></div>
 										<h3 class="major"></h3>
-											<h4>Teaching</h4>
+											<h4>TAing at UCLA</h4>
 											<h4></h4>
 												<ul>
-													<li><b>Cal Poly CubeSat Lab</b> - As the ADCS team lead for 1 year, gave weekly lectures in control theory, modeling and simulation, rigid body dynamics and spacecraft instrumentation</li>
+													<li><b>Math 31A - Differential and Integral Calculus</b> Fall 2024</li>
 												</ul>
 									<section>
 
