added awards to awards page

--- a/awards_and_recognitions.html
+++ b/awards_and_recognitions.html
@@ -51,7 +51,7 @@
 						<header>
 							<div class="inner">
 								<h2>Teaching</h2>
-								<p>Listed below are my teaching experiences.</p>
+								<p>Listed below are recongitions with which I have been honored.</p>
 							</div>
 						</header>
 
@@ -61,71 +61,19 @@
 								<div class="inner">
 
 									<section>
-										<div id="Teaching"><div></div>
+										<div id="CalPoly"><div></div>
 										<h3 class="major"></h3>
-											<h4>Teaching</h4>
+											<h4>Cal Poly</h4>
 											<h4></h4>
 												<ul>
-													<li><b>Cal Poly CubeSat Lab</b> - As the ADCS team lead for 1 year, gave weekly lectures in control theory, modeling and simulation, rigid body dynamics and spacecraft instrumentation</li>
-												</ul>
-									<section>
-
-									<section>
-										<div id="Tutoring"><div></div>
-										<h3 class="major"></h3>
-											<h4>Tutoring</h4>
-											<h4></h4>
-												<ul>
-													<li><b>AP Physics</b> - Worked as an AP physics tutor Fall semester 2023 for local high school student</li>
+													<li><b>Academic Excellence Award in Physics, May 18th 2024</b> - Presented by the Bailey College of Science and Mathematics for academic excellence</li>
+													<li><b>Physics Department Outstanding Student Award, June 10th 2024</b> - Presented by the phyiscs department for academic, research and project excellence</li>
 												</ul>
 									<section>
 
 								</div>
 							</div>
 
-				<!-- Footer -->
-					<!-- <section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
-
-			</div> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
