updated contact and added awards to every menu

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
 								<li><a href="projects.html">Projects</a></li>
 								<li><a href="activities.html">Activities</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
+								<li><a href="awards_and_recognitions.html">Awards and Recognitions</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -50,7 +51,7 @@
 						<header>
 							<div class="inner">
 								<h2>Contact Info</h2>
-								<p>Email: tgloe@calpoly.edu</p>
+								<p>Email: tgloe@math.ucla.edu</p>
 								<p>Alt email: trevor1loe@gmail.com</p>
 								<a href="https://github.com/trevorgloe" class="button small">Github</a>
 								<a href="https://www.linkedin.com/in/trevor-loe-b71811194" class="button small">LinkedIn</a>
