added office hours and fixed title of awards section

--- a/awards_and_recognitions.html
+++ b/awards_and_recognitions.html
@@ -50,7 +50,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Teaching</h2>
+								<h2>Awards and Recognitions</h2>
 								<p>Listed below are recongitions with which I have been honored.</p>
 							</div>
 						</header>
