--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
 							</div>
 						</section>
 
+						<section id="office_hours" class="wrapper alt style2"></section>
+							<div class="inner">
+								<h2 class="major">Current Office Hours</h2>
+								<p>TBD</p>
+							</div>
+						</section>
+
 						<section id="Education" class="wrapper alt style2">
 							<div class="inner">
 								<h2 class="major">Education</h2>
