fixed error with office hours displaying

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							</div>
 						</section>
 
-						<section id="office_hours" class="wrapper alt style2"></section>
+						<section id="office_hours" class="wrapper alt style2">
 							<div class="inner">
 								<h2 class="major">Current Office Hours</h2>
 								<p>TBD</p>
