updated office hours

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<section id="office_hours" class="wrapper alt style2">
 							<div class="inner">
 								<h2 class="major">Current Office Hours</h2>
-								<p>TBD</p>
+								<p>Wednesday 2-3</p>
 							</div>
 						</section>
 
