Added multi calc TAing

--- a/teaching.html
+++ b/teaching.html
@@ -67,6 +67,7 @@
 											<h4></h4>
 												<ul>
 													<li><b>Math 31A - Differential and Integral Calculus</b> Fall 2024</li>
+													<li><b>Math 32A - Calculus of Several Variables</b> Winter 2024</li>
 												</ul>
 									<section>
 
