--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="projects.html">Projects</a></li>
-								<li><a href="activities.html">Activities</a></li>
+								<!-- <li><a href="activities.html">Activities</a></li> -->
 								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="awards_and_recognitions.html">Awards and Recognitions</a></li>
 								<li><a href="contact.html">Contact</a></li>
