--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<div class="inner">
 								<h2 class="major">About Me</h2>
 								<p>Hello! My name is Trevor Loe and I am a Ph.D. student in Applied Mathematics at UCLA. I graduated as a double major in Physics and Mathematics, Summa Cum Laude at the California Polytechnic State University, San Luis Obispo. I am generally interested in research related to applied and computational mathematics related to nonlinear dynamical systems and networks. My technical experience, both as a software engineer and as a mathematics student has involved research in the areas of control theory, particle accelerators, biological modeling, and RF systems.</p>
-								<a href="CV_TrevorLoe_Sep2024.pdf" class="button small">CV</a>
+								<a href="Ciriculum_Vitae_TrevorLoe_Jan2025.pdf" class="button small">CV</a>
 								<p>Below you can find the research projects I've worked on, my teaching experience, and a list of my publications.</p>
 								<a href="projects.html" class="button">Projects</a>
 								<!-- <a href="activities.html" class="button">Activities</a> -->
