--- a/ucla_qualifying_exams.html
+++ b/ucla_qualifying_exams.html
@@ -6,11 +6,15 @@
 -->
 <html>
 	<head>
-		<title>Trevor Loe - Publications</title>
+		<title>Trevor Loe - UCLA Qualifying Exam Resources</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+		<script id="MathJax-script" async
+				src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js">
+		</script>
 	</head>
 	<body class="is-preload">
 
@@ -46,49 +50,36 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Publications</h2>
-								<p>Below are publications that I am an author or co-author on.</p>
+								<h2>UCLA Qualifying Exam Resources</h2>
+								<p>Below are resources I created in studying for the Numerical Analysis and the Optimization and Numerical Linear Algebra qualifying exams</p>
 							</div>
 						</header>
 
+						<!-- Begin actual projects-->
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
 
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/muon_campus.jpg" alt="" /></a>
-											<h3 class="major">Commissioning the Muon Campus external beamline: first beam optics measurement</h3>
-											<p>Trevor Loe and Diktys Stratakis. Journal of Instrumentation 18(04):P04005, April 2023</p>
-											<a href="https://iopscience.iop.org/article/10.1088/1748-0221/18/04/P04005" class="special">Link to paper</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/crab_cavities_0.jpg" alt="" /></a>
-											<h3 class="major">Time-domain simulation of the crab cavity/beam interation</h3>
-											<p>Trevor Hidalgo, Trevor Loe, Matti Toivola, Themis Mastoridis, Kevin Smith. BNL Technical Notes, Feb. 2023</p>
-											<a href="https://technotes.bnl.gov/Home/ViewTechNote/224087?selectedPageNumber=0" class="special">Link to paper</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/blue_canyon_standard_NST.png" alt="" /></a>
-											<h3 class="major">A Low Cost Star Tracker for CubeSat Missions</h3>
-											<p>Josh Grace, Luca Merlo Paula Soares, Trevor Loe, and John Bellardo. AIAA Dec. 2021</p>
-											<a href="https://arc.aiaa.org/doi/abs/10.2514/6.2022-0520" class="special">Link to paper</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/all_OTFBgain_nyq.png" alt="" /></a>
-											<h3 class="major">Senior Project: Crab Cavity Instabilities Due to Fundamental Crabbing Mode and Crab Cavity Impedance</h3>
-											<p>Trevor Loe, Advisor: Themis Mastoridis. Submitted June 7th, 2023</p>
-											<a href="TrevorLoe_seniorproj.pdf" class="special">Link to paper</a>
-										</article>
-									</section>
+									<section>
+										<div id="Numerical"><div></div>
+										<h3 class="major"></h3>
+											<h4>Numerical Analysis</h4>
+											<h4></h4>
+									<section>
+									
+
+									<section>
+										<div id="ONLA"><div></div>
+										<h3 class="major"></h3>
+											<h4>Optimization and Numerical Linear Algebra</h4>
+											<h4></h4>
+									<section>
 
 								</div>
 							</div>
 
-					</section>
-
 				<!-- Footer -->
-				<!--	<section id="footer">
+					<!-- <section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
