added initial NA study sheet

--- a/ucla_qualifying_exams.html
+++ b/ucla_qualifying_exams.html
@@ -64,6 +64,7 @@
 										<div id="Numerical"><div></div>
 										<h3 class="major"></h3>
 											<h4>Numerical Analysis</h4>
+											<a href="UCLA_Math_NA_qual_study.pdf" class="button">Study Sheet</a>
 											<h4></h4>
 									<section>
 									
