--- a/publications.html
+++ b/publications.html
@@ -58,6 +58,12 @@
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/muon_campus.jpg" alt="" /></a>
+											<h3 class="major">Electron-ion Collider Transverse Instabilities Due to the Crab Cavity Fundamental Impedance</h3>
+											<p>T. Mastoridis, T. Loe, and M. Blaskiewicz. Physical Review Accelerators and Beams (Vol. 28, No. 1) Jan. 2025</p>
+											<a href="https://journals.aps.org/prab/abstract/10.1103/PhysRevAccelBeams.28.011001" class="special">Link to paper</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/muon_campus.jpg" alt="" /></a>
 											<h3 class="major">Commissioning the Muon Campus external beamline: first beam optics measurement</h3>
 											<p>Trevor Loe and Diktys Stratakis. Journal of Instrumentation 18(04):P04005, April 2023</p>
 											<a href="https://iopscience.iop.org/article/10.1088/1748-0221/18/04/P04005" class="special">Link to paper</a>
