updated picture in 2025 publication

--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
 
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/muon_campus.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/crab_psd_fact.png" alt="" /></a>
 											<h3 class="major">Electron-ion Collider Transverse Instabilities Due to the Crab Cavity Fundamental Impedance</h3>
 											<p>T. Mastoridis, T. Loe, and M. Blaskiewicz. Physical Review Accelerators and Beams (Vol. 28, No. 1) Jan. 2025</p>
 											<a href="https://journals.aps.org/prab/abstract/10.1103/PhysRevAccelBeams.28.011001" class="special">Link to paper</a>
