--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/crab_psd_fact.png" alt="" /></a>
 											<h3 class="major">Electron-ion Collider Transverse Instabilities Due to the Crab Cavity Fundamental Impedance</h3>
-											<p>T. Mastoridis, T. Loe, and M. Blaskiewicz. Physical Review Accelerators and Beams (Vol. 28, No. 1) 2025</p>
+											<p>T. Mastoridis, T. Loe, and M. Blaskiewicz. Physical Review Accelerators and Beams (Vol. 28, No. 1) Jan. 2025</p>
 											<a href="https://journals.aps.org/prab/abstract/10.1103/PhysRevAccelBeams.28.011001" class="special">Link to paper</a>
 										</article>
 										<article>
