added inner wrapper

--- a/publications.html
+++ b/publications.html
@@ -90,66 +90,69 @@
 
 								</div>
 							</div>
-							
-							<section>
-								<div id="pub_table"><div>
-								<h3 class="major">Publications</h3>
-								<h4></h4>
-								<div class="table-wrapper">
-									<table>
-										<thead>
-											<tr>
-												<th>Authors</th>
-												<th>Paper</th>
-												<th>Link</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td><a href="#Star_Tracker">Star Tracker</a></td>
-												<td>Testing for a low-cost cubesat star-tracker</td>
-												<td> </td>
-											</tr>
-											<tr>
-												<td><a href="#Rigid_body_dyna">Rigid Body Dynamics Simulation</a></td>
-												<td>Rigid body dynamics and control system simulation for the Cal Poly Cubesat Lab</td>
-												<td> </td>
-											</tr>
-											<tr>
-												<td><a href="#Stickcube">Stickcube</a></td>
-												<td>Simulation, building and testing of self-balancing pendulum for ADCS testing purposes</td>
-												<td><a href="https://github.com/trevorgloe/stickcube_code" class="button small">Repository</a></td>
-											</tr>
-											<tr>
-												<td><a href="#Crab cavity trans beam load">EIC Crab Cavity LLRF Simulations</a></td>
-												<td>Simulation and design specifications for the EIC LLRF</td>
-												<td> </td>
-											</tr>
-											<tr>
-												<td><a href="#MCM">Cyclist Energy Optimization, MCM 2022</a></td>
-												<td>Optimation with SQP of road cyclist bioenergy for winning entry in 2022 MCM</td>
-												<td><a href="https://github.com/trevorgloe/MCM2022" class="button small">Repository</a></td>
-											</tr>
-											<tr>
-												<td><a href="#Fermilab">Fermilab Muon Beamline Analysis</a></td>
-												<td>Simulation and data analysis of Fermilab's Muon Campus M4 beamline</td>
-												<td><a href="https://github.com/trevorgloe/SULI_fermilab_M4_analysis" class="button small">Repository</a></td>
-											</tr>
-											<tr>
-												<td><a href="#Mushroom data">Mycology Data Analysis</a></td>
-												<td>Clustering and topological data analysis on Cal Poly Mycology club data</td>
-												<td><a href="https://github.com/trevorgloe/Math476project_mushroom_data" class="button small">Repository</a></td>
-											</tr>
-										</tbody>
-										<tfoot>
-											<tr>
-												<td colspan="2"></td>
-												<td> </td>
-											</tr>
-										</tfoot>
-									</table>
-								</div>
-							</section>
+
+							<div class="wrapper">
+								<div class="inner">
+
+									<section>
+										<div id="pub_table"><div>
+										<h3 class="major">Publications</h3>
+										<h4></h4>
+										<div class="table-wrapper">
+											<table>
+												<thead>
+													<tr>
+														<th>Authors</th>
+														<th>Paper</th>
+														<th>Link</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td><a href="#Star_Tracker">Star Tracker</a></td>
+														<td>Testing for a low-cost cubesat star-tracker</td>
+														<td> </td>
+													</tr>
+													<tr>
+														<td><a href="#Rigid_body_dyna">Rigid Body Dynamics Simulation</a></td>
+														<td>Rigid body dynamics and control system simulation for the Cal Poly Cubesat Lab</td>
+														<td> </td>
+													</tr>
+													<tr>
+														<td><a href="#Stickcube">Stickcube</a></td>
+														<td>Simulation, building and testing of self-balancing pendulum for ADCS testing purposes</td>
+														<td><a href="https://github.com/trevorgloe/stickcube_code" class="button small">Repository</a></td>
+													</tr>
+													<tr>
+														<td><a href="#Crab cavity trans beam load">EIC Crab Cavity LLRF Simulations</a></td>
+														<td>Simulation and design specifications for the EIC LLRF</td>
+														<td> </td>
+													</tr>
+													<tr>
+														<td><a href="#MCM">Cyclist Energy Optimization, MCM 2022</a></td>
+														<td>Optimation with SQP of road cyclist bioenergy for winning entry in 2022 MCM</td>
+														<td><a href="https://github.com/trevorgloe/MCM2022" class="button small">Repository</a></td>
+													</tr>
+													<tr>
+														<td><a href="#Fermilab">Fermilab Muon Beamline Analysis</a></td>
+														<td>Simulation and data analysis of Fermilab's Muon Campus M4 beamline</td>
+														<td><a href="https://github.com/trevorgloe/SULI_fermilab_M4_analysis" class="button small">Repository</a></td>
+													</tr>
+													<tr>
+														<td><a href="#Mushroom data">Mycology Data Analysis</a></td>
+														<td>Clustering and topological data analysis on Cal Poly Mycology club data</td>
+														<td><a href="https://github.com/trevorgloe/Math476project_mushroom_data" class="button small">Repository</a></td>
+													</tr>
+												</tbody>
+												<tfoot>
+													<tr>
+														<td colspan="2"></td>
+														<td> </td>
+													</tr>
+												</tfoot>
+											</table>
+										</div>
+									</section>
 
 					</section>
 
