updated table with first paper and renamed columns

--- a/publications.html
+++ b/publications.html
@@ -65,14 +65,16 @@
 												<tr>
 													<th>Authors</th>
 													<th>Paper</th>
-													<th>Link</th>
+													<!-- <th>Link</th> -->
+													 <th>Journal</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-													<td><a href="#Star_Tracker">Star Tracker</a></td>
-													<td>Testing for a low-cost cubesat star-tracker</td>
-													<td> </td>
+													<td>T. Mastoridis, T. Loe, and M. Blaskiewicz</td>
+													<td>Electron-ion Collider Transverse Instabilities Due to the Crab Cavity Fundamental Impedance</td>
+													<td>Physical Review Accelerators and Beams (Vol. 28, No. 1) Jan. 2025</td>
+													<!-- <td> </td> -->
 												</tr>
 												<tr>
 													<td><a href="#Rigid_body_dyna">Rigid Body Dynamics Simulation</a></td>
