tried making paper title a link

--- a/publications.html
+++ b/publications.html
@@ -72,7 +72,7 @@
 											<tbody>
 												<tr>
 													<td>T. Mastoridis, T. Loe, and M. Blaskiewicz</td>
-													<td>Electron-ion Collider Transverse Instabilities Due to the Crab Cavity Fundamental Impedance</td>
+													<td><a href="https://journals.aps.org/prab/abstract/10.1103/PhysRevAccelBeams.28.011001">Electron-ion Collider Transverse Instabilities Due to the Crab Cavity Fundamental Impedance</a></td>
 													<td>Physical Review Accelerators and Beams (Vol. 28, No. 1) Jan. 2025</td>
 													<!-- <td> </td> -->
 												</tr>
