added second paper

--- a/publications.html
+++ b/publications.html
@@ -77,9 +77,9 @@
 													<!-- <td> </td> -->
 												</tr>
 												<tr>
-													<td><a href="#Rigid_body_dyna">Rigid Body Dynamics Simulation</a></td>
-													<td>Rigid body dynamics and control system simulation for the Cal Poly Cubesat Lab</td>
-													<td> </td>
+													<td>Trevor Loe and Diktys Stratakis</td>
+													<td><a href="https://iopscience.iop.org/article/10.1088/1748-0221/18/04/P04005">Commissioning the Muon Campus External Beamline: First Beam Optics Measurement</a></td>
+													<td>Journal of Instrumentation 18(04):P04005, April 2023</td>
 												</tr>
 												<tr>
 													<td><a href="#Stickcube">Stickcube</a></td>
