added the rest of the papers

--- a/publications.html
+++ b/publications.html
@@ -82,29 +82,19 @@
 													<td>Journal of Instrumentation 18(04):P04005, April 2023</td>
 												</tr>
 												<tr>
-													<td><a href="#Stickcube">Stickcube</a></td>
-													<td>Simulation, building and testing of self-balancing pendulum for ADCS testing purposes</td>
-													<td><a href="https://github.com/trevorgloe/stickcube_code" class="button small">Repository</a></td>
+													<td>Trevor Hidalgo, Trevor Loe, Matti Toivola, Themis Mastoridis, Kevin Smith</td>
+													<td><a href="https://technotes.bnl.gov/Home/ViewTechNote/224087?selectedPageNumber=0">Time-domain Simulation of the Crab Cavity/beam Interation</a></td>
+													<td>BNL Technical Notes, Feb. 2023</td>
 												</tr>
 												<tr>
-													<td><a href="#Crab cavity trans beam load">EIC Crab Cavity LLRF Simulations</a></td>
-													<td>Simulation and design specifications for the EIC LLRF</td>
-													<td> </td>
+													<td>Josh Grace, Luca Merlo Paula Soares, Trevor Loe, and John Bellardo</td>
+													<td><a href="https://arc.aiaa.org/doi/abs/10.2514/6.2022-0520">A Low Cost Star Tracker for CubeSat Missions</a></td>
+													<td>AIAA Dec. 2021</td>
 												</tr>
 												<tr>
-													<td><a href="#MCM">Cyclist Energy Optimization, MCM 2022</a></td>
-													<td>Optimation with SQP of road cyclist bioenergy for winning entry in 2022 MCM</td>
-													<td><a href="https://github.com/trevorgloe/MCM2022" class="button small">Repository</a></td>
-												</tr>
-												<tr>
-													<td><a href="#Fermilab">Fermilab Muon Beamline Analysis</a></td>
-													<td>Simulation and data analysis of Fermilab's Muon Campus M4 beamline</td>
-													<td><a href="https://github.com/trevorgloe/SULI_fermilab_M4_analysis" class="button small">Repository</a></td>
-												</tr>
-												<tr>
-													<td><a href="#Mushroom data">Mycology Data Analysis</a></td>
-													<td>Clustering and topological data analysis on Cal Poly Mycology club data</td>
-													<td><a href="https://github.com/trevorgloe/Math476project_mushroom_data" class="button small">Repository</a></td>
+													<td>Trevor Loe, Advisor: Themis Mastoridis. </td>
+													<td><a href="TrevorLoe_seniorproj.pdf">Senior Project: Crab Cavity Instabilities Due to Fundamental Crabbing Mode and Crab Cavity Impedance</a></td>
+													<td>Cal Poly San Luis Obispo Library, Submitted June 7th, 2023</td>
 												</tr>
 											</tbody>
 											<tfoot>
