--- a/publications.html
+++ b/publications.html
@@ -106,7 +106,7 @@
 										</table>
 									</div>
 
-									<div class="wrapper">
+									<!-- <div class="wrapper">
 										<div class="inner">
 		
 											<section class="features">
@@ -143,7 +143,7 @@
 											</section>
 		
 										</div>
-									</div>
+									</div> -->
 
 					</section>
 
