added ONLA solutions and updated NA study sheet

--- a/ucla_qualifying_exams.html
+++ b/ucla_qualifying_exams.html
@@ -74,6 +74,7 @@
 										<h3 class="major"></h3>
 											<h4>Optimization and Numerical Linear Algebra</h4>
 											<a href="UCLA_Math_ONLA_qual_study.pdf" class="button">Study Sheet</a>
+											<a href="UCLA_Math_ONLA_sol.pdf" class="button">Past Qual Solutions</a>
 											<h4></h4>
 									<section>
 
